[package]
name = "spawn_chat"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3.30"
hyper = "1.4.1"
rand = "0.8.5"
reqwest = { version = "0.12.5", features = ["json"] }
reqwest-websocket = "0.4.1"
tokio = { version = "1.39.2", features = ["rt", "rt-multi-thread", "macros"] }
uuid = { version = "1.10.0", features = ["v4"] }
chrono = "0.4.38"
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.124"
tokio-util = "0.7.11"
ctrlc = "3.4.5"
